@@ -1,3 +1,8 @@
+2010-03-10  Peter Spjuth  <peter.spjuth@gmail.com>
+
+        * unix/tkUnixCairoPath.c (TkPathInit): Get correct size of Drawable.
+	This fixes an intermittent strange clipping bug.
+
 2010-03-10  George Petasis  <petasis@iit.demokritos.gr>
 
         * generic/tkpCanvPoly.c: fixes in DeletePolygon() to avoid double
